--- a/src/main/res/layout/activity_discover.xml
+++ b/src/main/res/layout/activity_discover.xml
@@ -56,9 +56,11 @@
         android:layout_weight="1" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_width="159dp"
+        android:layout_height="165dp"
         android:layout_gravity="right"
-        android:src="@drawable/connections_bg" />
+        android:scaleType="fitCenter"
+        android:src="@drawable/drmapart" />
 
 </LinearLayout>
