--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -291,11 +291,19 @@
                             <Button
                                 android:id="@+id/button_read_battery"
                                 style="@style/Widget.AppCompat.Button.Borderless"
-                                android:layout_width="wrap_content"
+                                android:layout_width="101dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:onClick="readBattery"
                                 android:text="@string/read_bat_button" />
+
+                            <Button
+                                android:id="@+id/button_info"
+                                style="@style/Widget.AppCompat.Button.Borderless"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="@string/info_button" />
 
                         </LinearLayout>
 
